src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint16__bit_not_uint16__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/uint16.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: UInt16,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: UInt16,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        BitNotUint16(
            BitNotUint16,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
